Render jQuery in-HTML

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 [o] Rename HTML title: BreathTuner -> Breath Tuner
 [o] Clean config.rb
     [o] Move helpers out of config.rb
-[>] Move assets in HTML; test if speed is improved; if not then revert
+[=] Move assets in HTML; test if speed is improved; if not then revert
 [ ]! Bars by pixel
 [ ] Stop tuner when max breaths reached
 [ ] Add licence and link to source
