Refactor to IIFE
Now the code is much more taut.

--- a/TODO
+++ b/TODO
@@ -9,9 +9,9 @@
 [o]! Stats
 [o] Stop tuner when max breaths reached
 [o] Upgrade to jQuery 2
-[>] Refactor to IIFE
+[o] Refactor to IIFE
 [ ]! Adapt to viewport size
-    [ ] Pre-render
+    [>] Pre-render
 [ ] Browser requirements
 [ ] Icon
 [ ] Scroll canvas by grabbing
